--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <!-- Header -->
             <div class="header container">
                 <!-- Logo -->
-                <a href="./index.html"
+                <a href="/"
                     ><img src="./assets/logo.svg" alt="logo" class="logo"
                 /></a>
 
                 <div class="menu">
-                    <a class="active-menu" href="./index.html">Home</a>
+                    <a class="active-menu" href="/">Home</a>
                     <a href="./about-me.html">About Me</a>
                     <a href="./contact.html">Contact</a>
                     <a href="https://www.linkedin.com/in/danka-koljanin-3a6b941a5/" target="_blank">
