--- a/about-me.html
+++ b/about-me.html
@@ -89,7 +89,7 @@
                                 <span class="font-weight-400">Level: B1</span>
                             </li>
                             <li>
-                                2019. Graduate horticultural engineer<br />
+                                2019. Graduated horticultural engineer<br />
                                 <span class="font-weight-400"
                                     >Agricultural University Banja Luka</span
                                 >
