--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="./assets//logo.svg" type="image/gif" sizes="16x16">
+        <link
+            rel="icon"
+            href="./assets//logo.svg"
+            type="image/gif"
+            sizes="16x16"
+        />
         <!-- Font -->
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap"
@@ -27,7 +32,10 @@
                     <a href="./">Home</a>
                     <a class="active-menu" href="./about-me.html">About Me</a>
                     <a href="./contact.html">Contact</a>
-                    <a href="https://www.linkedin.com/in/danka-koljanin-3a6b941a5/" target="_blank">
+                    <a
+                        href="https://www.linkedin.com/in/danka-koljanin-3a6b941a5/"
+                        target="_blank"
+                    >
                         <img src="./assets/linkedin.svg" alt="linkedin" />
                     </a>
                 </div>
@@ -40,11 +48,11 @@
                         About me<span class="orange">:</span>
                     </h1>
                     <div class="content">
-                        Hi, I am a UI / UX designer.
+                        Hi, I'm a UX/UI designer.
                         <br />
                         <br />
-                        The tools I work with on a daily basis include
-                        Photoshop, Illustrator, and Figma. Besides that, I have
+                        The tools I work with on a daily basis include Figma,
+                        Photoshop, Illustrator. Besides that, I have
                         experience with HTML, CSS and WordPress.
                     </div>
                 </div>
@@ -63,9 +71,9 @@
                     <div class="skills">
                         <h4>Skills</h4>
                         <ul class="list">
-                            <li>UX / UI</li>
+                            <li>UX/UI</li>
                             <li>Figma</li>
-                            <li>Photoshop</li>
+                            <li>Adobe Photoshop</li>
                             <li>Adobe Illustrator</li>
                             <li>WordPress</li>
                             <li>HTML</li>
@@ -81,7 +89,7 @@
                             <li>
                                 2021. HUBL Education<br />
                                 <span class="font-weight-400"
-                                    >UX / UI Design</span
+                                    >UX/UI Design</span
                                 >
                             </li>
                             <li>
