--- a/about-me.html
+++ b/about-me.html
@@ -73,6 +73,7 @@
                         <ul class="list">
                             <li>UX/UI</li>
                             <li>Figma</li>
+                            <li>Adobe XD</li>
                             <li>Adobe Photoshop</li>
                             <li>Adobe Illustrator</li>
                             <li>WordPress</li>
